--- a/_locales/kn/messages.json
+++ b/_locales/kn/messages.json
@@ -63,7 +63,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Google ಖಾತೆಯ ಸಿಂಕ್ ಸಂಗ್ರಹಣೆಯಿಂದ ಸೆಟ್ಟಿಂಗ್ಗಳನ್ನು ಪಡೆದುಕೊಳ್ಳಿ"
