--- a/_locales/ml/messages.json
+++ b/_locales/ml/messages.json
@@ -60,7 +60,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Google അക്കൗണ്ട് സമന്വയ സംഭരണത്തിൽ നിന്നും ക്രമീകരണങ്ങൾ ലഭ്യമാക്കുക"
