--- a/_locales/te/messages.json
+++ b/_locales/te/messages.json
@@ -63,7 +63,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Google ఖాతా సమకాలీకరణ నిల్వ నుండి సెట్టింగ్లను పొందండి"
