--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -63,7 +63,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "從Google帳戶同步存儲中獲取設置"
