--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -63,7 +63,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "গুগুল একাউন্ট সিঙ্ক স্টোরেজ থেকে সেটিংস আনতে"
