--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -60,7 +60,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Obtenga la configuración del almacenamiento de sincronización de Google Account."
