--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -57,7 +57,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Hae asetukset Google-tilisi synkronointivaraukselta"
