--- a/_locales/gu/messages.json
+++ b/_locales/gu/messages.json
@@ -63,7 +63,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Google એકાઉન્ટ સમન્વયન સંગ્રહમાંથી સેટિંગ્સ મેળવો"
