--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -66,7 +66,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Google 계정 동기화 저장소에서 설정 가져 오기"
