--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -63,7 +63,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Iegūstiet iestatījumus no Google konta sinhronizācijas krātuves"
