--- a/_locales/mr/messages.json
+++ b/_locales/mr/messages.json
@@ -66,7 +66,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Google खाते समक्रमण संचयनावरून सेटिंग्ज आणा"
