--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -63,7 +63,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Mengambil tetapan dari storan penyegerakan akaun google"
