--- a/_locales/sl/messages.json
+++ b/_locales/sl/messages.json
@@ -54,7 +54,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Pridobite nastavitve iz shrambe za sinhronizacijo v računu Google"
