--- a/_locales/ta/messages.json
+++ b/_locales/ta/messages.json
@@ -63,7 +63,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "Google கணக்கு ஒத்திசைவு சேமிப்பகத்திலிருந்து அமைப்புகளை எடு"
