--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -63,7 +63,7 @@
       "message": "A zoomed eyedropper & color chooser tool that allows you to select color values from webpages and more."
    },
    "extName": {
-      "message": "ColorPick Eyedropper"
+      "message": "ColorPick Eyedropper (V3)"
    },
    "fetchSync": {
       "message": "从Google帐户同步存储中获取设置"
